--- a/app/assets/stylesheets/books/layout.scss
+++ b/app/assets/stylesheets/books/layout.scss
@@ -1,3 +1,4 @@
+// books layout
 body {
   background-color: #fff;
   color: #333;
@@ -13,4 +14,37 @@ p {
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+}
+
+div.field {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+}
+
+th {
+  padding-bottom: 5px;
+}
+
+td {
+  padding-bottom: 7px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px;
+}
+
+a {
+  &:hover {
+    background: #000;
+    color: #fff;
+  }
+  color: #000;
 }
