--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,15 +13,16 @@
 
   <!--booksの内容-->
   <tbody>
-    <tr>
-      <% @books.each do |book| %>
-        <tr><%= book.title %></tr>
-        <tr><%= book.body %></tr>
-        <tr><%= link_to "Show", book_path(book.id) %></tr>
-        <tr><%= link_to "Edit", edit_book_path(book.id) %></tr>
-        <tr><%= link_to "Destroy", book_path(book.id), method: :delete %></tr>
-      <% end %>
-    </tr>
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to "Show", book_path(book.id), method: :get %></td>
+        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+        <td><%= link_to "Destroy", book_path(book.id), method: :delete %></td>
+      </tr>
+    <% end %>
+    
   </tbody>
 
 </table>
@@ -35,7 +36,7 @@
   </div>
   <div class = "field">
     <%= f.label :body, "body" %>
-    <%= f.text_area :title, class: "book_title" %>
+    <%= f.text_area :body, class: "book_text" %>
   </div>
   <div class = "actions">
     <%= f.submit "Create Book" %>
