--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,10 @@
 <!--booksの一覧表示-->
 <h1>Books</h1>
+<!--サクセスメッセージの表示-->
+<% if flash.notice %>
+  <p class = "notice"><%= flash.notice %></p>
+<% end %>
+
 <!--table表示-->
 <table>
   <!--collumn名-->
@@ -22,7 +27,7 @@
         <td><%= link_to "Destroy", book_path(book.id), method: :delete %></td>
       </tr>
     <% end %>
-    
+
   </tbody>
 
 </table>
@@ -41,6 +46,4 @@
   <div class = "actions">
     <%= f.submit "Create Book" %>
   </div>
-
-
 <% end %>
